_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    max-height: 62pt;
    background-color: $brand-background-color;
    border-bottom: 26pt solid $grey-color-light;

    // Positioning context for the mobile navigation icon
    position: relative;

    @include media-query($on-laptop) {
        max-height: 51pt;
        border-bottom: 25pt solid $grey-color-light;
    }

    @include media-query($on-palm) {
        max-height: 39pt;
        border-bottom: 16pt solid $grey-color-light;
    }
}

.site-title {
    font-family: $title-font-family;
    font-size: 46pt;
    font-weight: bold;
    font-style: italic;
    line-height: 93pt;
    letter-spacing: $title-letter-spacing;
    margin-bottom: 0;
    float: left;

    @include media-query($on-laptop) {
        font-size: 36pt;
        line-height: 78pt;
    }

    @include media-query($on-palm) {
        font-size: 28pt;
        line-height: 60pt;
    }

    &,
    &:visited {
        color: $grey-color-dark;
    }

    &:hover,
    &:active {
        color: lighten($grey-color-dark, 30%);
    }
}

.site-nav {
    float: right;
    padding-top: 67pt;

    .menu-icon {
        display: none;
    }

    .page-link {
        font-size: $subheading-font-size;
        font-family: $title-font-family;
        font-weight: bold;
        font-style: italic;
        letter-spacing: $title-letter-spacing;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: $spacing-unit * 3 / 4;
        }

        &,
        &:visited {
            color: $grey-color-dark;
        }

        &:hover,
        &:active {
            color: lighten($grey-color-dark, 30%);
        }
    }

    @include media-query($on-laptop) {
        padding-top: 55pt;

        .page-link {
            font-size: 17pt;

            &:not(:first-child) {
                margin-left: $spacing-unit / 2;
            }
        }
    }

    @include media-query($on-palm) {
        padding-top: 0;
        position: absolute;
        top: 20px;
        right: 15px;
        background-color: $grey-color-light;
        border: 2px solid $grey-color-dark;
        border-radius: 3px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: $spacing-unit / 2;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    font-family: $title-font-family;
    font-style: italic;
    border-top: 23pt solid $grey-color-light;
    padding: $spacing-unit 0;
}

.footer-nav {
    font-weight: bold;
    margin-top: -44pt;
    margin-bottom: $spacing-unit / 2;
    letter-spacing: $title-letter-spacing;

    a {
        &:not(:first-child) {
            margin-left: $spacing-unit / 2;
        }

        &,
        &:visited {
            color: $grey-color-dark;
        }

        &:hover,
        &:active {
            color: lighten($grey-color-dark, 30%);
        }
    }
}

.footer-heading {
    color: $grey-color-dark;
    font-size: $heading-font-size;
    font-weight: bold;
    font-style: italic;
    letter-spacing: $title-letter-spacing;
    margin-bottom: $spacing-unit / 4;
}

.social-media-list {
    margin-left: 0;
    padding-top: 4px;

    a {
        &:not(:first-child) {
            margin-left: 36px * 0.5;
        }
    }
}

.footer-col-wrapper {
    font-size: $code-font-size;
    color: $grey-color;
    margin-left: -$spacing-unit;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit;
}

.footer-col-1 {
    width: -webkit-calc(65% - #{$spacing-unit});
    width:         calc(65% - #{$spacing-unit});
}

.footer-col-2 {
    width: -webkit-calc(35% - #{$spacing-unit});
    width:         calc(35% - #{$spacing-unit});
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - #{$spacing-unit});
        width:         calc(100% - #{$spacing-unit});
    }
}



/**
 * Page content
 */
.page-content {
    padding: $spacing-unit 0;
}

.page-heading {
    font-family: $base-font-family;
    font-weight: normal;
    font-style: normal;
    font-size: $subheading-font-size;
}

.asterisk {
    font-size: $small-font-size;
    text-align: right;
}

.latest-heading {
    font-size: $subheading-font-size;
}

.post-list {
    margin-left: 0;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit * 1.5;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }

    > li h2 {
        margin-bottom: 0;
    }
}

.home .post-list {
    margin-top: $spacing-unit / 2;
}

.related-posts {
    h2 {
        font-size: $subheading-font-size;
        margin-bottom: 0.25em;
        color: $grey-color-dark;
    }

    ul {
        font-size: $small-font-size;
        font-family: $title-font-family;
        font-style: italic;
        list-style: none;
        margin-left: 0;
        margin-bottom: $spacing-unit;
    }
}

.categories {
    font-size: $subheading-font-size;
    margin-bottom: 0;
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
    font-family: $title-font-family;
    font-style: italic;
}

.home {
    .gravatar {
        float: right;
        width: $gravatar-size;
        height: $gravatar-size;
        margin-left: $spacing-unit * 0.75;
        margin-bottom: $spacing-unit;
        border-radius: $gravatar-size / 2;

        @include media-query($on-palm) {
            float: none;
        }
    }

    .post-meta {
        display: block;
        font-size: $small-font-size;
        margin-bottom: 0.5em;
    }
}

.post-link {
    display: block;
    font-size: $heading-font-size;
    font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
    font-weight: bold;
    font-style: italic;
    margin-bottom: 0.1em;
}

.did-you-mean {
    font-family: $title-font-family;
    font-size: $small-font-size;
    font-style: italic;
    padding: 0 0 0 $spacing-unit / 2;
    border-left: 10px solid $brand-background-color;
    margin-bottom: $spacing-unit / 2;
    @extend %clearfix;

    span {
        float: left;
    }

    ul {
        float: left;
        list-style: none;
        margin-left: $spacing-unit / 2;
        margin-bottom: 0;
        font-style: italic;

        li a {
            font-style: italic;
            font-weight: bold;
        }
    }
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-family: $title-font-family;
    font-weight: bold;
    font-style: italic;
    font-size: 32pt;
    line-height: 1.2em;
    letter-spacing: $title-letter-spacing;

    @include media-query($on-laptop) {
        font-size: 27pt;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: $heading-font-size;
        padding-top: 0.5em;
        letter-spacing: $title-letter-spacing;

        @include media-query($on-laptop) {
            font-size: $heading-font-size;
        }
    }

    h3 {
        font-size: $heading-font-size;
        padding-top: 0.5em;
        letter-spacing: $title-letter-spacing;

        @include media-query($on-laptop) {
            font-size: $base-font-size;
        }
    }

    h4 {
        font-size: $base-font-size;
        padding-top: 0.5em;
        letter-spacing: $title-letter-spacing;

        @include media-query($on-laptop) {
            font-size: 14pt;
        }
    }

    ul {
        list-style: none;
        list-style-image: none;
        list-style-position: outside;

        > li::before {
            padding-right: $spacing-unit / 3;
            content: '•';
            position: absolute;
            display: inline-block;
            box-sizing: border-box;
            width: $spacing-unit;
            margin-left: -$spacing-unit;
            text-align: right;
        }

        li {
            margin-bottom: 0.75em;
        }
    }

    p {
        margin-bottom: 1em;
    }
}

/**
 * Responsive IFrames for embedded content
 * Thanks to Anders M. Andersen
 * http://amobil.se/2011/11/responsive-embeds/
 */
.embed-container {
    position: relative;
    height: 0;
    overflow: hidden;
    margin-bottom: $spacing-unit / 2;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.ratio16x9 {
    padding-bottom: 56.25%;
}

.ratio4x3 {
    padding-bottom: 75%;
}

.vimeo {
    padding-top: 0;
}

.slideshare {
    padding-top: 45px;
}

.youtube {
    padding-top: 30px;
}

.image-wrapper {
    text-align: center;

    .image-caption {
        font-size: $small-font-size;
        color: $grey-color;
        margin-top: $spacing-unit / 3;
    }
}

